--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: "Open Sans";
     color:darkblue;
-    margin:10px,50px,10ox,50px;
+    margin: 50px,100px,100px,50px;
     background-color: ivory;
 }
 
